--- a/web.iras3/package.json
+++ b/web.iras3/package.json
@@ -17,6 +17,7 @@
 		"debug": "~2.0.0",
 		"jade": "~1.6.0",
 		"underscore": "~1.8.3",
-		"q": "~1.4.1"
+		"q": "~1.4.1",
+		"underscore.string":"~3.2.2"
 	}
 }
